--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #212121;
 }
-#date, #time {
+#date, #demo {
     background-color: #1d1d1d;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
